--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -22,8 +22,7 @@ SEARCH_HOST=search
 SEARCH_PORT=9050
 RESTRICTER_URL=http://autoupdate:9012/internal/autoupdate
 
-AUTH_HOST=auth
-AUTH_PORT=9004
+KEYCLOAK_URL=http://keycloak:8080
 CACHE_HOST=redis
 CACHE_PORT=6379
 
