Adjustments in docker compose

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -93,9 +93,11 @@ services:
       - EMAIL_ACCEPT_SELF_SIGNED_CERTIFICATE=false
       - DEFAULT_FROM_EMAIL=noreply@example.com
       - OPENSLIDES_BACKEND_CREATE_INITIAL_DATA=1
-      - KEYCLOAK_URL=http://keycloak:8080
+      - OPENSLIDES_KEYCLOAK_URL=http://keycloak:8080
+      - OPENSLIDES_AUTH_REALM=os
+      - OPENSLIDES_AUTH_CLIENT_ID=os-ui
     volumes:
-      - ../../../libraries/pip-auth/os_authlib:/app/os_authlib
+      - ../../openslides-auth-service/libraries/pip-auth:/pip-auth
       - ../../openslides-backend/openslides_backend:/app/openslides_backend
       - ../../openslides-backend/tests:/app/tests
       - ../../openslides-backend/cli:/app/cli
@@ -131,6 +133,7 @@ services:
     volumes:
       - ../../openslides-icc-service/cmd:/root/cmd
       - ../../openslides-icc-service/internal:/root/internal
+      - ../../openslides-autoupdate-service:/openslides-autoupdate-service
     ports:
       - "9007:9007"
 
@@ -146,6 +149,7 @@ services:
     volumes:
       - ../../openslides-search-service/cmd:/root/cmd
       - ../../openslides-search-service/pkg:/root/pkg
+      - ../../openslides-autoupdate-service:/openslides-autoupdate-service
     ports:
       - "9050:9050"
 
@@ -158,6 +162,7 @@ services:
     environment:
       - OPENSLIDES_DEVELOPMENT=1
     volumes:
+      - ../../openslides-auth-service/libraries/pip-auth:/pip-auth
       - ../../openslides-media-service/src:/app/src
 
   manage:
@@ -207,5 +212,6 @@ services:
     volumes:
       - ../../openslides-vote-service/cmd:/root/cmd
       - ../../openslides-vote-service/internal:/root/internal
+      - ../../openslides-autoupdate-service:/openslides-autoupdate-service
     ports:
       - "9013:9013"
