--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -22,7 +22,6 @@ SEARCH_HOST=search
 SEARCH_PORT=9050
 RESTRICTER_URL=http://autoupdate:9012/internal/autoupdate
 
-KEYCLOAK_URL=http://keycloak:8080
 CACHE_HOST=redis
 CACHE_PORT=6379
 
@@ -52,3 +51,8 @@ VOTE_DATABASE_PASSWORD=openslides
 OTEL_EXPORTER_JAEGER_ENDPOINT=http://jaeger:14268/api/traces
 OTEL_EXPORTER_OTLP_ENDPOINT=collector:4318
 OPENTELEMETRY_ENABLED=0
+
+OPENSLIDES_KEYCLOAK_URL=http://keycloak:8080
+OPENSLIDES_AUTH_REALM=os
+OPENSLIDES_AUTH_CLIENT_ID=os-ui
+OPENSLIDES_TOKEN_ISSUER=https://localhost:8000/idp/auth/realms/os
