--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -18,8 +18,17 @@ jobs:
         run: |
           echo "RELEASE_DATE=$(date -I)" >> $GITHUB_ENV
 
+      - name: Set release body
+        run: |
+          echo "RELEASE_DATE=$(
+            cat patchnotes/${{ github.ref_name }}.md
+            echo ""
+            echo "For instructions on how to use production ready docker images, see [INSTALL.md](https://github.com/OpenSlides/OpenSlides/blob/main/INSTALL.md)"
+          )" >> $GITHUB_ENV
+
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
-          title: "OpenSlides stable version ${{ github.ref_name }} ($RELEASE_DATE)"
+          name: "OpenSlides version ${{ github.ref_name }} ($RELEASE_DATE)"
           bodyFile: "patchnotes/${{ github.ref_name }}.md"
+          body: "$BODY"
