--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -20,15 +20,16 @@ jobs:
 
       - name: Set release body
         run: |
-          echo "RELEASE_DATE=$(
+          BODY=$(
             cat patchnotes/${{ github.ref_name }}.md
             echo ""
             echo "For instructions on how to use production ready docker images, see [INSTALL.md](https://github.com/OpenSlides/OpenSlides/blob/main/INSTALL.md)"
-          )" >> $GITHUB_ENV
+          )
+          echo "RELEASE_BODY='$BODY'" >> $GITHUB_ENV
 
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
           name: "OpenSlides version ${{ github.ref_name }} ($RELEASE_DATE)"
-          bodyFile: "patchnotes/${{ github.ref_name }}.md"
-          body: "$BODY"
+          body: "$RELEASE_BODY"
+
