--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -20,12 +20,14 @@ jobs:
 
       - name: Set release body
         run: |
-          BODY=$(
+          RELEASE_BODY=$(
             cat patchnotes/${{ github.ref_name }}.md
             echo ""
             echo "For instructions on how to use production ready docker images, see [INSTALL.md](https://github.com/OpenSlides/OpenSlides/blob/main/INSTALL.md)"
           )
-          echo "RELEASE_BODY='$BODY'" >> $GITHUB_ENV
+          echo "RELEASE_BODY<<EOF" >> $GITHUB_ENV
+          echo "$RELEASE_BODY" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Create release
         uses: ncipollo/release-action@v1
