--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -17,7 +17,12 @@ jobs:
       - name: Prepare release body
         run: |
           {
-            cat patchnotes/${{ github.ref_name }}.md
+            patchnotesfile="patchnotes/${{ github.ref_name }}.md"
+            if [ -f $patchnotesfile ]; then
+              cat $patchnotesfile
+            else
+              echo "No patchnotes found ..."
+            fi
             echo ""
             echo "For instructions on how to use production ready docker images, see [INSTALL.md](https://github.com/OpenSlides/OpenSlides/blob/main/INSTALL.md)"
           } > patchnotes.tmp.md
