--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -55,4 +55,6 @@ OPENTELEMETRY_ENABLED=0
 OPENSLIDES_KEYCLOAK_URL=http://keycloak:8080
 OPENSLIDES_AUTH_REALM=os
 OPENSLIDES_AUTH_CLIENT_ID=os-ui
+OPENSLIDES_KEYCLOAK_ADMIN_USERNAME=admin
+OPENSLIDES_KEYCLOAK_ADMIN_PASSWORD=admin
 OPENSLIDES_TOKEN_ISSUER=https://localhost:8000/idp/auth/realms/os
