--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -1,11 +1,7 @@
 ---
 name: Run integration tests
 on:
-  push:
-    branches:
-      - staging/4*
-      - stable/4*
-  pull_request:
+  workflow_call:
 
 jobs:
   run-tests:
