--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -24,6 +24,8 @@ jobs:
               echo "No patchnotes found ..."
             fi
             echo ""
+            echo "## How to use"
+            echo ""
             echo "For instructions on how to use production ready docker images, see [INSTALL.md](https://github.com/OpenSlides/OpenSlides/blob/main/INSTALL.md)"
           } > patchnotes.tmp.md
 
