use backend directory structure and split global into meta and data volumes

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -72,7 +72,8 @@ services:
       - ../../openslides-backend/openslides_backend:/app/openslides_backend
       - ../../openslides-backend/tests:/app/tests
       - ../../openslides-backend/cli:/app/cli
-      - ../../openslides-backend/global:/app/global
+      - ../../openslides-backend/data:/app/data
+      - ../../openslides-backend/meta:/app/meta
       - ../../openslides-backend/scripts:/app/scripts
 
   autoupdate:
