Change keycloak config

--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -52,7 +52,7 @@ OTEL_EXPORTER_JAEGER_ENDPOINT=http://jaeger:14268/api/traces
 OTEL_EXPORTER_OTLP_ENDPOINT=collector:4318
 OPENTELEMETRY_ENABLED=0
 
-OPENSLIDES_KEYCLOAK_URL=http://keycloak:8080
+OPENSLIDES_KEYCLOAK_URL=http://keycloak:8080/idp
 OPENSLIDES_AUTH_REALM=os
 OPENSLIDES_AUTH_CLIENT_ID=os-ui
 OPENSLIDES_KEYCLOAK_ADMIN_USERNAME=admin
