Add projector service to dev setup

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -20,6 +20,7 @@ jobs:
           - name: autoupdate
           - name: auth
           - name: search
+          - name: projector
           - name: vote
           - name: icc
           - name: media
