--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -22,6 +22,9 @@ SEARCH_HOST=search
 SEARCH_PORT=9050
 RESTRICTER_URL=http://autoupdate:9012/internal/autoupdate
 
+PROJECTOR_HOST=projector
+PROJECTOR_PORT=9051
+
 AUTH_HOST=auth
 AUTH_PORT=9004
 CACHE_HOST=redis
