--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -57,4 +57,4 @@ OPENSLIDES_AUTH_REALM=os
 OPENSLIDES_AUTH_CLIENT_ID=os-ui
 OPENSLIDES_KEYCLOAK_ADMIN_USERNAME=admin
 OPENSLIDES_KEYCLOAK_ADMIN_PASSWORD=admin
-OPENSLIDES_TOKEN_ISSUER=https://localhost:8000/idp/auth/realms/os
+OPENSLIDES_TOKEN_ISSUER=https://localhost:8000/idp/realms/os
