--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -89,11 +89,8 @@ services:
       - ../../openslides-autoupdate-service/cmd:/root/openslides-autoupdate-service/cmd
       - ../../openslides-autoupdate-service/internal:/root/openslides-autoupdate-service/internal
       - ../../openslides-autoupdate-service/pkg:/root/openslides-autoupdate-service/pkg
-      - ../../go.work:/root/go.work
       - ../../lib/openslides-go:/root/lib/openslides-go
-      - ../../openslides-icc-service:/root/openslides-icc-service
-      - ../../openslides-vote-service:/root/openslides-vote-service
-      - ../../openslides-search-service:/root/openslides-search-service
+      - ./workspaces/autoupdate.work:/root/go.work
     ports:
       - "9012:9012"
 
@@ -109,11 +106,8 @@ services:
     volumes:
       - ../../openslides-icc-service/cmd:/root/openslides-icc-service/cmd
       - ../../openslides-icc-service/internal:/root/openslides-icc-service/internal
-      - ../../go.work:/root/go.work
       - ../../lib/openslides-go:/root/lib/openslides-go
-      - ../../openslides-autoupdate-service:/root/openslides-autoupdate-service
-      - ../../openslides-vote-service:/root/openslides-vote-service
-      - ../../openslides-search-service:/root/openslides-search-service
+      - ./workspaces/icc.work:/root/go.work
     ports:
       - "9007:9007"
 
@@ -129,11 +123,8 @@ services:
     volumes:
       - ../../openslides-search-service/cmd:/root/openslides-search-service/cmd
       - ../../openslides-search-service/pkg:/root/openslides-search-service/pkg
-      - ../../go.work:/root/go.work
       - ../../lib/openslides-go:/root/lib/openslides-go
-      - ../../openslides-icc-service:/root/openslides-icc-service
-      - ../../openslides-vote-service:/root/openslides-vote-service
-      - ../../openslides-autoupdate-service:/root/openslides-autoupdate-service
+      - ./workspaces/search.work:/root/go.work
     ports:
       - "9050:9050"
 
@@ -207,10 +198,7 @@ services:
     volumes:
       - ../../openslides-vote-service/cmd:/root/openslides-vote-service/cmd
       - ../../openslides-vote-service/internal:/root/openslides-vote-service/internal
-      - ../../go.work:/root/go.work
       - ../../lib/openslides-go:/root/lib/openslides-go
-      - ../../openslides-icc-service:/root/openslides-icc-service
-      - ../../openslides-autoupdate-service:/root/openslides-autoupdate-service
-      - ../../openslides-search-service:/root/openslides-search-service
+      - ./workspaces/vote.work:/root/go.work
     ports:
       - "9013:9013"
