--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -86,9 +86,11 @@ services:
       - OPENSLIDES_DEVELOPMENT=1
       - DATASTORE_TIMEOUT=30
     volumes:
-      - ../../openslides-autoupdate-service/cmd:/root/cmd
-      - ../../openslides-autoupdate-service/internal:/root/internal
-      - ../../openslides-autoupdate-service/pkg:/root/pkg
+      - ../../openslides-autoupdate-service/cmd:/root/openslides-autoupdate-service/cmd
+      - ../../openslides-autoupdate-service/internal:/root/openslides-autoupdate-service/internal
+      - ../../openslides-autoupdate-service/pkg:/root/openslides-autoupdate-service/pkg
+      - ../../lib/openslides-go:/root/lib/openslides-go
+      - ./workspaces/autoupdate.work:/root/go.work
     ports:
       - "9012:9012"
 
@@ -102,8 +104,10 @@ services:
     environment:
       - OPENSLIDES_DEVELOPMENT=1
     volumes:
-      - ../../openslides-icc-service/cmd:/root/cmd
-      - ../../openslides-icc-service/internal:/root/internal
+      - ../../openslides-icc-service/cmd:/root/openslides-icc-service/cmd
+      - ../../openslides-icc-service/internal:/root/openslides-icc-service/internal
+      - ../../lib/openslides-go:/root/lib/openslides-go
+      - ./workspaces/icc.work:/root/go.work
     ports:
       - "9007:9007"
 
@@ -117,8 +121,10 @@ services:
     environment:
       - OPENSLIDES_DEVELOPMENT=1
     volumes:
-      - ../../openslides-search-service/cmd:/root/cmd
-      - ../../openslides-search-service/pkg:/root/pkg
+      - ../../openslides-search-service/cmd:/root/openslides-search-service/cmd
+      - ../../openslides-search-service/pkg:/root/openslides-search-service/pkg
+      - ../../lib/openslides-go:/root/lib/openslides-go
+      - ./workspaces/search.work:/root/go.work
     ports:
       - "9050:9050"
 
@@ -190,7 +196,9 @@ services:
       - OPENSLIDES_DEVELOPMENT=1
       - VOTE_DISABLE_LOG=true
     volumes:
-      - ../../openslides-vote-service/cmd:/root/cmd
-      - ../../openslides-vote-service/internal:/root/internal
+      - ../../openslides-vote-service/cmd:/root/openslides-vote-service/cmd
+      - ../../openslides-vote-service/internal:/root/openslides-vote-service/internal
+      - ../../lib/openslides-go:/root/lib/openslides-go
+      - ./workspaces/vote.work:/root/go.work
     ports:
       - "9013:9013"
