Add projector service to setup

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -128,6 +128,25 @@ services:
     ports:
       - "9050:9050"
 
+  projector:
+    image: openslides-projector-dev
+    depends_on:
+      - autoupdate
+      - backend
+      - postgres
+    env_file: services.env
+    environment:
+      - OPENSLIDES_DEVELOPMENT=1
+    volumes:
+      - ../../openslides-projector-service/cmd:/root/openslides-projector-service/cmd
+      - ../../openslides-projector-service/pkg:/root/openslides-projector-service/pkg
+      - ../../openslides-projector-service/templates:/root/templates
+      - ../../openslides-projector-service/static:/root/static
+      - ../../lib/openslides-go:/root/lib/openslides-go
+      - ./workspaces/projector.work:/root/go.work
+    ports:
+      - "9051:9051"
+
   auth:
     image: openslides-auth-dev
     depends_on:
