--- a/.gitmodules
+++ b/.gitmodules
@@ -40,6 +40,9 @@
 [submodule "openslides-search-service"]
 	path = openslides-search-service
 	url = https://github.com/OpenSlides/openslides-search-service.git
+[submodule "openslides-projector-service"]
+	path = openslides-projector-service
+	url = https://github.com/OpenSlides/openslides-projector-service.git
 [submodule "openslides-go"]
 	path = lib/openslides-go
 	url = https://github.com/OpenSlides/openslides-go.git
