--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -1,7 +1,8 @@
 on: push
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Test actions
-      uses: Janmtbehrens/OpenSlides/test-submodule
+  test-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Test actions
+        uses: Janmtbehrens/OpenSlides/test-submodule
