--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -4,5 +4,6 @@ jobs:
   test-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Test actions
         uses: ./.github/actions/test-submodule
