--- a/.github/actions/test-submodule/action.yml
+++ b/.github/actions/test-submodule/action.yml
@@ -5,7 +5,7 @@ runs:
   using: "composite"
   steps:
       - name: "Test Build"
-      - run: |
+        run: |
           echo "Test"
           chmod +x workflow-run.sh
           bash workflow-run.sh
