--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Workspace
+        uses: ${{ github.workspace }}
       - name: Test actions
         uses: ./.github/actions/test-submodule
