--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Workspace
         run: echo ${{ github.repository }}
       - name: Test actions
-        uses: Janmtbehrens/OpenSlides/actions/test-submodule@latest
+        uses: Janmtbehrens/OpenSlides/actions/test-submodule@e53b9cbc59940edddf7e731a833e52f3b76b6db3
