--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -6,9 +6,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Workspace
-        run: |
-          echo ${{ github.repository }}
-          echo ${{ github.sha }}
       - name: Test actions
-        uses: Janmtbehrens/OpenSlides/actions/test-submodule@e53b9cbc59940edddf7e731a833e52f3b76b6db3S
+        uses: Janmtbehrens/OpenSlides/actions/test-submodule
