--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Test
         run: echo "Hey"
       - name: Test actions
-        uses: Janmtbehrens/OpenSlides/test-submodule@latest
+        uses: Janmtbehrens/OpenSlides/test-submodule@main
