revert broken .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,45 @@
+[submodule "openslides-datastore-service"]
+	path = openslides-datastore-service
+	url = https://github.com/OpenSlides/openslides-datastore-service.git
+	branch = main
+[submodule "openslides-client"]
+	path = openslides-client
+	url = https://github.com/OpenSlides/openslides-client.git
+	branch = main
+[submodule "openslides-backend"]
+	path = openslides-backend
+	url = https://github.com/OpenSlides/openslides-backend.git
+	branch = main
+[submodule "openslides-autoupdate-service"]
+	path = openslides-autoupdate-service
+	url = https://github.com/OpenSlides/openslides-autoupdate-service.git
+	branch = main
+[submodule "openslides-auth-service"]
+	path = openslides-auth-service
+	url = https://github.com/OpenSlides/openslides-auth-service.git
+	branch = main
+[submodule "openslides-media-service"]
+	path = openslides-media-service
+	url = https://github.com/OpenSlides/openslides-media-service.git
+	branch = main
+[submodule "openslides-manage-service"]
+	path = openslides-manage-service
+	url = https://github.com/OpenSlides/openslides-manage-service.git
+	branch = main
+[submodule "openslides-icc-service"]
+	path = openslides-icc-service
+	url = https://github.com/OpenSlides/openslides-icc-service.git
+	branch = main
+[submodule "openslides-vote-service"]
+	path = openslides-vote-service
+	url = https://github.com/OpenSlides/openslides-vote-service.git
+	branch = main
+[submodule "openslides-proxy"]
+	path = openslides-proxy
+	url = https://github.com/OpenSlides/openslides-proxy.git
+[submodule "openslides-search-service"]
+	path = openslides-search-service
+	url = https://github.com/OpenSlides/openslides-search-service.git
 [submodule "openslides-go"]
 	path = lib/openslides-go
 	url = https://github.com/OpenSlides/openslides-go.git
