--- a/.github/workflows/debug-workflow.yml
+++ b/.github/workflows/debug-workflow.yml
@@ -9,4 +9,4 @@ jobs:
         uses: creyD/prettier_action@v4.6
         with:
           # This part is also where you can pass other options, for example:
-          prettier_options: --check
+          prettier_options: --check **/*.{sh}
