--- a/dev/scripts/act/Dockerfile
+++ b/dev/scripts/act/Dockerfile
@@ -12,8 +12,15 @@ WORKDIR /app/submodule/
 
 # Installs
 RUN apt-get update && \
-    apt-get install -y curl git docker unzip
+    apt-get install --no-install-recommends -y \
+    curl \
+    docker \
+    git \
+    unzip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/nektos/act/master/install.sh | bash
 
 # Copy repository content
