Small act changes

--- a/dev/scripts/act/Dockerfile
+++ b/dev/scripts/act/Dockerfile
@@ -13,6 +13,7 @@ WORKDIR /app/submodule/
 # Installs
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
+    ca-certificates \
     curl \
     docker \
     git \
