Convert Caddy proxy to Traefik and improve E2E test stability
This commit replaces the Caddy reverse proxy with Traefik while maintaining
all existing functionality and improving the E2E test suite stability.

## Traefik Proxy Implementation

### New Traefik Configuration
- Created openslides-traefik-proxy/ directory with complete Traefik setup
- Implemented dynamic routing for all OpenSlides microservices:
  - Autoupdate service (WebSocket/SSE support)
  - Presenter service (backend:9003)
  - Action service (backend:9002)
  - Search service
  - Auth service (including SAML routes)
  - ICC service (WebSocket support)
  - Vote service
  - Media service
  - Manage service (gRPC with h2c support)
  - Client service (default/fallback)

### Key Features
- HTTPS support with existing self-signed certificates
- Proper load balancing configuration
- WebSocket and gRPC protocol support
- Environment variable-based service discovery
- Development and production Docker targets

### Files Added
- openslides-traefik-proxy/Dockerfile
- openslides-traefik-proxy/traefik.yml (static configuration)
- openslides-traefik-proxy/dynamic.yml (dynamic routing)
- openslides-traefik-proxy/entrypoint.sh (configuration script)
- openslides-traefik-proxy/Makefile
- openslides-traefik-proxy/certs/ (copied from Caddy setup)

### Docker Compose Updates
- Modified dev/docker/docker-compose.dev.yml to use Traefik
- Updated proxy service configuration
- Added proper environment variables and volume mounts
- Maintained all existing service dependencies

## E2E Test Improvements

### Enhanced Test Stability
- Created robustLogin() helper function with:
  - Multiple selector strategies for form elements
  - Retry logic (3 attempts)
  - Session persistence detection
  - Angular initialization waits

### Test Isolation
- Implemented fresh browser context for each test
- Prevents test interference and session conflicts
- Proper resource cleanup after each test

### Improved Wait Strategies
- Replaced unrel

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -224,7 +224,7 @@ services:
 
   proxy:
     build:
-        context: ../../openslides-proxy
+        context: ../../openslides-traefik-proxy
         target: "dev"
         args:
             CONTEXT: "dev"
@@ -235,6 +235,13 @@ services:
       - autoupdate
     ports:
       - "8000:8000"
+    env_file: services.env
+    environment:
+      - ENABLE_LOCAL_HTTPS=1
+      - TRAEFIK_LOG_LEVEL=INFO
+    volumes:
+      - ../../openslides-traefik-proxy/traefik.yml:/etc/traefik/traefik.yml
+      - ../../openslides-traefik-proxy/dynamic.yml:/etc/traefik/dynamic/dynamic.yml
 
   mailhog:
     image: mailhog/mailhog
