fix: update e2e tests for Traefik proxy migration
- Update LoginPage.ts to wait for correct /system/auth/login URL pattern instead of /api/
- Fix docker-compose.dev.yml to use correct Traefik proxy image name
- Add test:ts npm script for running TypeScript tests directly

The authentication tests were failing because they were waiting for /api/ responses
when OpenSlides uses /system/ prefix for all backend endpoints.

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -228,7 +228,7 @@ services:
         target: "dev"
         args:
             CONTEXT: "dev"
-    image: openslides-proxy-dev
+    image: openslides-traefik-proxy-dev
     depends_on:
       - client
       - backend
