--- a/openslides-traefik-proxy/dynamic.yml
+++ b/openslides-traefik-proxy/dynamic.yml
@@ -59,7 +59,7 @@ http:
         
     # Manage service (gRPC)
     manage:
-      rule: "Headers(`Content-Type`, `application/grpc`)"
+      rule: "Header(`Content-Type`, `application/grpc`)"
       service: manage
       entryPoints:
         - websecure
