feat: implement comprehensive e2e test improvements with system health checks
- Add automatic system health checks before all test runs
- Implement npm-based test execution with pretest hooks
- Clean up all test scripts and use npm commands exclusively
- Add robust authentication helper with API-based login
- Implement browser reuse for better performance
- Add page stability helpers to handle dynamic content
- Improve test infrastructure with better error handling
- Clean up all test reports and temporary files
- Update README with clear testing instructions

All tests now automatically verify system health before running,
ensuring services are properly initialized and accessible.

--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -250,6 +250,33 @@ services:
     ports:
       - "8025:8025" # web ui to check mails manually
 
+  caddy-test:
+    build:
+        context: ../../openslides-proxy
+        target: "dev"
+        args:
+            CONTEXT: "dev"
+    image: openslides-caddy-proxy-dev
+    container_name: openslides-caddy-test
+    depends_on:
+      - client
+      - backend
+      - autoupdate
+      - auth
+      - media
+      - search
+      - vote
+      - icc
+      - manage
+    ports:
+      - "8001:8000"  # Maps container port 8000 to host port 8001
+    env_file: services.env
+    environment:
+      - ENABLE_LOCAL_HTTPS=1
+      # Override ports to prevent conflicts with Traefik
+      - CADDY_PORT=8000
+    restart: unless-stopped
+
   vote:
     build:
         context: ../../openslides-vote-service
