--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -63,6 +63,7 @@ services:
     volumes:
       - ../../openslides-client/client/src:/app/src
       - ../../openslides-client/client/cli:/app/cli
+      - ../../openslides-client/packages:/packages
 
   backend:
     build:
