--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -63,7 +63,7 @@ services:
     volumes:
       - ../../openslides-client/client/src:/app/src
       - ../../openslides-client/client/cli:/app/cli
-      - ../../openslides-client/packages:/packages
+      - ../../openslides-client/packages/openslides-motion-diff/src:/packages/openslides-motion-diff/src
 
   backend:
     build:
