--- a/dev/docker/docker-compose.dev.yml
+++ b/dev/docker/docker-compose.dev.yml
@@ -53,9 +53,9 @@ services:
       - auth
     env_file: services.env
     ports:
-        - "9002:9002"
-        - "9003:9003"
-        - "5678:5678"
+      - "9002:9002"
+      - "9003:9003"
+      - "5678:5678"
     environment:
       - OPENSLIDES_DEVELOPMENT=1
       - EMAIL_HOST=mailhog
@@ -86,11 +86,11 @@ services:
       - OPENSLIDES_DEVELOPMENT=1
       - DATASTORE_TIMEOUT=30
     volumes:
-      - ../../openslides-autoupdate-service/cmd:/root/openslides-autoupdate-service/cmd
-      - ../../openslides-autoupdate-service/internal:/root/openslides-autoupdate-service/internal
-      - ../../openslides-autoupdate-service/pkg:/root/openslides-autoupdate-service/pkg
-      - ../../lib/openslides-go:/root/lib/openslides-go
-      - ./workspaces/autoupdate.work:/root/go.work
+      - ../../openslides-autoupdate-service/cmd:/app/openslides-autoupdate-service/cmd
+      - ../../openslides-autoupdate-service/internal:/app/openslides-autoupdate-service/internal
+      - ../../openslides-autoupdate-service/pkg:/app/openslides-autoupdate-service/pkg
+      - ../../lib/openslides-go:/app/lib/openslides-go
+      - ./workspaces/autoupdate.work:/app/go.work
     ports:
       - "9012:9012"
 
@@ -104,10 +104,10 @@ services:
     environment:
       - OPENSLIDES_DEVELOPMENT=1
     volumes:
-      - ../../openslides-icc-service/cmd:/root/openslides-icc-service/cmd
-      - ../../openslides-icc-service/internal:/root/openslides-icc-service/internal
-      - ../../lib/openslides-go:/root/lib/openslides-go
-      - ./workspaces/icc.work:/root/go.work
+      - ../../openslides-icc-service/cmd:/app/openslides-icc-service/cmd
+      - ../../openslides-icc-service/internal:/app/openslides-icc-service/internal
+      - ../../lib/openslides-go:/app/lib/openslides-go
+      - ./workspaces/icc.work:/app/go.work
     ports:
       - "9007:9007"
 
@@ -196,9 +196,9 @@ services:
       - OPENSLIDES_DEVELOPMENT=1
       - VOTE_DISABLE_LOG=true
     volumes:
-      - ../../openslides-vote-service/cmd:/root/openslides-vote-service/cmd
-      - ../../openslides-vote-service/internal:/root/openslides-vote-service/internal
-      - ../../lib/openslides-go:/root/lib/openslides-go
-      - ./workspaces/vote.work:/root/go.work
+      - ../../openslides-vote-service/cmd:/app/openslides-vote-service/cmd
+      - ../../openslides-vote-service/internal:/app/openslides-vote-service/internal
+      - ../../lib/openslides-go:/app/lib/openslides-go
+      - ./workspaces/vote.work:/app/go.work
     ports:
       - "9013:9013"
