--- a/dev/docker/services.env
+++ b/dev/docker/services.env
@@ -38,6 +38,8 @@ MEDIA_DATABASE_HOST=postgres
 MEDIA_DATABASE_NAME=openslides
 MEDIA_DATABASE_USER=openslides
 MEDIA_DATABASE_PASSWORD=openslides
+MEDIA_DATABASE_PORT=5432
+MEDIA_DATABASE_PASSWORD_FILE=/run/secrets/postgres_password
 
 MANAGE_HOST=manage
 MANAGE_PORT=9008
